assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Quicksand&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Kanit',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    color: #bac7be;
    background: #6f6866;
}

h1,
h2 {
    font-family: 'Quicksand',sans-serif;
    text-transform: uppercase;
    margin-bottom: 15px;
    
}

ul {
    list-style-type: none;
}

.welcome {
    text-align: center;
    font-size: 200%;
    margin: 20px 0 1.5px 0;
}

hr {
    border-top: 1px solid #bac7be;
    width: 25%;
    margin: 0 auto;
}

/* Container for the whole page */
.container {
    max-width: 1400px;
    margin: 0 auto;
    padding: 0 30px;
    max-height: 100%;
}

/* navbar and logo */
.navbar {
    color: #bac7be;
    height: 60px;
}

.navbar .logo {
    font-size: 280%;
    font-weight: bold;
    letter-spacing: 2px;
}

.navbar a {
    color:#bac7be;
    text-decoration: none;
    font-size: 18px;
    font-weight: bold;
}

.navbar a:hover {
    border-bottom: 1px solid #bac7be;
}
.navbar .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
    flex-direction: row;
}

.navbar ul {
    display: flex;
    flex-direction: row-reverse;
}

.navbar ul li {
    margin-left: 20px;
}

.active {
    border-bottom: 1px solid #bac7be;
}

/* hero image */

.hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;

    position: relative;
}

.cover-text, .cover-text h2 {
    color: #071108;
}

.cover-text h3 {
    text-align: left;
    font-size: 90%;
}

.hero-image {
    height: 600px;
    width: 100%;
    background: url(../images/hero-image.jpg) no-repeat center center;

    /* creates the level of zoom for hero image */
    animation-name: hero-zoom;
    animation-duration: 3s;
    animation-fill-mode: forwards;
}

/* creates the level of zoom for hero image */
@keyframes hero-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.1);
    }
}
.cover-text {
    font-size: 100%;
    font-family: 'Quicksand', sans-serif;
    letter-spacing: 2px;

    width: 300px;
    height: 200px;

    padding-top: 20px;
    padding-left: 10px;

    background-color: rgba(243,117,43, .8);

    bottom: 30px;
    right: 150px;

    position: absolute;
}

/* main index content */
.boxes .container {
    display: flex;
    flex-wrap:wrap;  
}
.box {
    display:flex;
    flex: 1 1 600px;
    background: #f3752b;
    color: #071108;
    border-radius: 10px;
    margin: 20px 10px;
    box-shadow: 0 3px 5px rgba(0, 0, 0, .6);
    padding: 15px 20px;
    flex-direction: column;
    align-items: center;
}


.box img {
    height: 15vw;
    max-height: 333px;
    min-height: 200px;
    object-fit: cover;
}

.box h2 {
    text-align: center;
}

.box p{
    text-align: center;
    font-size: large;    
}

/* footer */

footer {
    height:150px;
}

.social-networks {
    text-align: center;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #bac7be;
}

footer div > p{
    text-align: center;
    padding-bottom: 50px;
    font-size:120%;
}

/* gallery */

.photos {
    clear: both;
    line-height: 0;
    column-count: 3;
    column-gap: 0px;
}

.photos > img {
    width: 100%;
}

/* back to top */

.back-to-top {
    text-align: center;
}

.back-to-top a {
    text-decoration: none;
    color: #bac7be;
    font-size: 200%;
    font-weight: bold;
}

.back-to-top i {
    padding: 5px;
}

